--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -886,11 +886,6 @@ img.avatar {
   color: #777;
 }
 
-.like:hover,
-.dislike:hover {
-  color: #2C3E50;
-}
-
 .social-btn {
   cursor: pointer;
 }
@@ -1014,6 +1009,20 @@ p.flow-text.center-align.padcast-page-sub-header {
 .heading {
   font-size: 26px;
   margin-left: 10px;
+}
+
+.username {
+  max-width: 100px;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
+  float: left;
+  margin-top: -2px;
+}
+
+.dropdown-button img {
+  float: left;
+  margin: 10px;
 }
 body,
 html {
